<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:id="@+id/recipe_item"

    android:layout_width="match_parent"
    android:layout_height="120dp"

    android:padding="16dp"

    android:layout_marginBottom="16dp"

    android:background="@drawable/layout_border"

    tools:context=".view.MainNavHost" >

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_name"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/NAME"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_description"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginEnd="16dp"

        android:text="@string/DESCRIPTION"

        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn_delete"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_detail"

        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/teal_700"

        android:text="@string/DETAIL"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btn_delete"
        app:layout_constraintStart_toStartOf="@id/btn_delete"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_delete"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/DELETE"

        app:layout_constraintTop_toBottomOf="@id/btn_detail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>