<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:id="@+id/recipe_details_fragment"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:padding="16dp"

    tools:context=".view.MainNavHost">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_name"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/NAME"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_description"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="16dp"

        android:text="@string/DESCRIPTION"

        app:layout_constraintTop_toBottomOf="@+id/tv_name"
        app:layout_constraintBottom_toTopOf="@id/sv_body"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:id="@+id/sv_body"

        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"

        app:layout_constraintTop_toBottomOf="@id/tv_description"
        app:layout_constraintBottom_toTopOf="@id/btn_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_body"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/DESCRIPTION"/>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_home"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:backgroundTint="@color/teal_700"

        android:text="@string/HOME"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>